# django-starter

./: .gitignore  pyproject.toml
django_starter/: settings.py  urls.py
django_starter_app/: apps.py  forms.py  urls.py  views.py
django_starter_app/templates/: 403.html  404.html  base.html  create_user.html  edit_profile.html  edit_user.html  edit_user_profile.html  home.html  user_list.html  user_profile.html
django_starter_app/templates/account/: login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html
django_starter_app/templates/layouts/: base.html  data_card.html  form_card.html
